--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     </ul>
 	</header>
 	<%- if user_signed_in? %>
-		<%= yield %>
+		<%= render 'home/form' %>
 	<%- end %>
 		<%= yield %>
        <p class="notice"><%= notice %></p>
