--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,25 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sleep</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
+<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= content_for?(:title) ? yield(:title) : "Sleep Meter" %></title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+    <%= yield(:head) %>
 </head>
 <body>
-	<header>
-		<h1>Sleep Meter</h1>
-		    <ul>
-      <%- if user_signed_in? %>
-        <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
-      <%- else %>
-        <li><%= link_to "Sign Up", new_user_registration_path %></li>
-        <li><%= link_to "Sign In", new_user_session_path %></li>
-      <%- end %>
-    </ul>
-	</header>
-		<%= yield %>
-       <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
-</body>
+    <header class="navbar navbar-fixed-top">
+      <nav class="navbar-inner">
+        <div class="masthead">
+          <ul class="nav nav-pills pull-right">
+            <%- if user_signed_in? %>
+              <li class="active"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+            <%- else %>
+              <li><%= link_to "Sign Up", new_user_registration_path %></li>
+              <li><%= link_to "Sign In", new_user_session_path %></li>
+            <%- end %>
+          </ul>
+          <h3 class="muted">Sleep Meter</h3>
+        </div>
+      </nav>
+    </header>
+    <div id="main" role="main">
+      <div class="container">
+        <div class="content">
+           <div class="row">
+            <div class="span12">
+              <%= yield %>
+               <p class="notice"><%= notice %></p>
+               <p class="alert"><%= alert %></p>
+            </div>
+          </div>
+
+          <footer>
+          </footer>
+        </div>
+      </div> <!--! end of .container -->
+    </div> <!--! end of #main -->
+  </body>
 </html>
