--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,11 +30,27 @@
     <div id="main" role="main">
       <div class="container">
         <div class="content">
-           <div class="row">
+          <div class="row">
             <div class="span12">
-              <%= yield %>
-               <p class="notice"><%= notice %></p>
-               <p class="alert"><%= alert %></p>
+              <%- if user_signed_in? %>
+                  <%= yield %>
+              <%- else %>
+                  <div class="jumbotron">
+                    <h1>Sleep Meter</h1>
+                    <img src="/assets/vu_meter.optimized.apng.png" />
+                    <p class="lead">Sleep Meter tracks your sleep time and is here to keep you healthy!</p>
+                    <a class="btn btn-large btn-success" <%= link_to "Sign Up", new_user_registration_path %></a>
+                    <%= yield %>
+                  </div>
+               <%- end %>
+                <% flash.each do |name, msg| %>
+                  <% if msg.is_a?(String) %>
+                    <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
+                      <a class="close" data-dismiss="alert">&#215;</a>
+                      <%= content_tag :div, msg, :id => "flash_#{name}" %>
+                    </div>
+                  <% end %>
+                <% end %>            
             </div>
           </div>
 
