--- a/app/views/sleep_times/index.html.erb
+++ b/app/views/sleep_times/index.html.erb
@@ -1,8 +1,12 @@
-<%- if user_signed_in? %>
-	<img src="/assets/vu_meter.optimized.apng.png" />
-	<%= render 'sleep_times/form' %>
-	<%- if @completed_sleep_time && @completed_sleep_time.sleep_duration != nil %>
-		<h2>Sleep Time: <%= @completed_sleep_time.sleep_duration %></h2>
-		<h2>You've slept a total of: <%= Time.at(current_user.sleep_times.sum(:duration)).gmtime.strftime('%R:%S') %> hours since you started using Sleep Meter!</h2>
+<div class="jumbotron">
+	<%- if user_signed_in? %>
+		<h1 id="title">Sleep-Meter</h1>
+		<div id="g1"></div>
+		<%= render 'sleep_times/form' %>
+		<%- if @completed_sleep_time && @completed_sleep_time.sleep_duration != nil %>
+			<h2>Sleep Time: <%= @completed_sleep_time.sleep_duration %></h2>
+			<p>Actual Total: <%= Time.at(current_user.sleep_times.sum(:duration)).gmtime.strftime('%R:%S') %> Hours</p>
+			<p>Expected Total: <%= current_user.expected_hours %>:00:00 Hours</p>
+		<%- end %>
 	<%- end %>
-<%- end %>
+</div>
