--- a/app/assets/stylesheets/application.css.scss.css
+++ b/app/assets/stylesheets/application.css.scss.css
@@ -8,9 +8,19 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+
  *= require_self
  *= require_tree .
  */
+
+@import url(http://fonts.googleapis.com/css?family=Voltaire);
+
+
+
+body{
+  background-image: image-url('otis_redding.png');
+}
+
 .content {
   background-color: #eee;
   padding: 20px;
@@ -21,4 +31,27 @@
   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
   -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
   box-shadow: 0 1px 2px rgba(0,0,0,.15);
+}
+
+#g1 {
+  width:400px; height:320px;
+  display: inline-block;
+  margin: 1em;
+  margin-top: -40px;
+}
+#nav_title{
+  font-family: 'Voltaire', sans-serif;
+  font-size: 40px;
+}
+#title {
+  font-family: 'Voltaire', sans-serif;
+  font-size: 100px;
+}
+
+#slogan{
+  padding-top: 30px;
+}
+.jumbotron {
+  margin: 38px;
+  text-align: center;
 }
