--- a/app/assets/stylesheets/application.css.scss.css
+++ b/app/assets/stylesheets/application.css.scss.css
@@ -18,11 +18,11 @@
 
 
 body{
-  background-image: image-url('otis_redding.png');
+  background-image: image-url('rainbow_background.png');
 }
 
 .content {
-  background-color: #eee;
+  background-color: white;
   padding: 20px;
   margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
   -webkit-border-radius: 0 0 6px 6px;
