--- a/app/assets/stylesheets/application.css.scss.css
+++ b/app/assets/stylesheets/application.css.scss.css
@@ -45,19 +45,24 @@ body{
 }
 #title {
   font-family: 'Voltaire', sans-serif;
-  font-size: 100px;
+  font-size: 50px;
 }
 
 #slogan{
   padding-top: 30px;
 }
 .jumbotron {
-  margin: 38px;
   text-align: center;
 }
 
-@media (max-width: 767px) {
-  #content .modal.fade.in {
-    top: 5%;
-  }
+.modal {
+position: fixed;
+top: 3%;
+right: 3%;
+left: 3%;
+bottom: 3%;
+width: auto;
+margin: 0;
 }
+
+
