--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,8 +38,8 @@
             <%- if user_signed_in? %>
               <li class="active"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
             <%- else %>
-              <li id="sign_up_in" data-toggle="modal" data-target="#myModal"><%= link_to "Sign Up", new_user_registration_path %></li>
-              <li data-toggle="modal" data-target="#myModal"><%= link_to "Sign In", new_user_session_path %></li>
+              <li><%= link_to "Sign Up", new_user_registration_path %></li>
+              <li><%= link_to "Sign In", new_user_session_path %></li>
             <%- end %>
           </ul>
           <h3 id="nav_title">Sleep Meter</h3>
@@ -59,13 +59,9 @@
                     <h4 id="slogan" class="muted">Not too much not too little.<br> Get them 8 hours sleep to keep your meter in the middle.</h4>
                     <div id="g1"></div>
                     <p class="lead">Sleep Meter tracks your sleep time and is here to keep you healthy!</p>
-                    <button class="btn btn-large btn-success" data-toggle="modal" data-target="#myModal"><%= link_to "Sign Up", new_user_registration_path %></button>
-                    <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                        <h3 id="myModalLabel">Sleep Meter</h3>
-                      </div>
+                    <button class="btn btn-large btn-success"><%= link_to "Sign Up", new_user_registration_path %></button>
                       <%= yield %>
+                    </div>
                     </div>
                   </div>
                <%- end %>
